dupit/tests/fail/not_clone.rs
#[derive(dupit::Duplicate)]
struct NotClone;

fn main() {}
